# gd-place-2024

./: .firebaserc  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  eslint.config.js  firebase-database-rules.json  firebase.json  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
emulator_data/: firebase-export-metadata.json
emulator_data/auth_export/: accounts.json
emulator_data/database_export/: gd-place-2023-dev-default-rtdb.json  gd-place-2023-dev.json
firebase-export-1744546166391QRBhdm/: firebase-export-metadata.json
functions/: package-lock.json  package.json  rollup.config.js  shared-lib  tsconfig.json
functions/src/: cooldown.ts  donations.ts  ending.ts  exports.ts  index.ts  logger.ts  meta.ts  mod.ts  object.ts  status_scheduler.ts  user.ts
public/: wasm.txt
public/textures/: getsizes.py
rust/: .gitignore  Cargo.toml
rust/draw-lib/: Cargo.toml
rust/draw-lib/src/: level.rs  lib.rs  object.rs  state.rs  text.rs
rust/draw-lib/src/render/: state.rs
rust/draw-lib/src/render/pipeline_grid/: shader.wgsl
rust/draw-lib/src/render/rectdraw/: billy.rs  level.rs  mod.rs
rust/rust-shared/: Cargo.toml
rust/rust-shared/src/: countdown.rs  history.rs  lib.rs  util.rs
rust/rust-shared/src/countdowndigits/: bg.gmd  bg1.gmd  bg2.gmd  bg3.gmd  bg4.gmd  bgnew.gmd  bgnew_colons_0.gmd  bgnew_colons_1.gmd  countdowndigits.gmd  countdowndigits_aeonair.gmd  countdowndigits_aqua.gmd  countdowndigits_audieo.gmd  countdowndigits_bianox.gmd  countdowndigits_bli.gmd  countdowndigits_boldstep.gmd  countdowndigits_breadking.gmd  countdowndigits_chunlv1.gmd  countdowndigits_connot.gmd  countdowndigits_culuc.gmd  countdowndigits_dangerkat.gmd  countdowndigits_davjt.gmd  countdowndigits_deffie.gmd  countdowndigits_desticy.gmd  countdowndigits_devon.gmd  countdowndigits_digi.gmd  countdowndigits_doggie.gmd  countdowndigits_domi.gmd  countdowndigits_dorami.gmd  countdowndigits_dreaminginsanity.gmd  countdowndigits_dreaminginsanity2.gmd  countdowndigits_dreaminginsanity3.gmd  countdowndigits_echonox.gmd  countdowndigits_evasium.gmd  countdowndigits_evw.gmd  countdowndigits_exyl.gmd  countdowndigits_flow.gmd  countdowndigits_flow2.gmd  countdowndigits_fungi.gmd  countdowndigits_galva.gmd  countdowndigits_glittershroom.gmd  (+57 more)
rust/rust-shared/src/gd/: cool_level.rs  layer.rs  level.rs  mod.rs  object.rs
rust/the-nexus/: Cargo.toml  build.rs  objects.json
rust/the-nexus/src/: lib.rs
rust/the-nexus/src/objects/: countdowndigits.gmd  levelstring.rs  list.rs  main_over_detail_objects.txt  mod.rs  object_default_z.txt  object_sheets.txt  placeobjs.gmd  song.rs
rust/timelapse/: Cargo.toml
rust/timelapse/src/: control.rs  main.rs
rust/wasm-lib/: Cargo.toml  build.rs  config.toml  example_config.toml  keepme_pkg_package.json  lol.cjs  pkg_package.json
rust/wasm-lib/src/: config.rs  countdown_digits  error.rs  level.rs  lib.rs  main.rs  object.rs  state.rs  text.rs  util.rs  utilgen.rs
rust/wasm-lib/src/render/: data.rs  mipmap_fragment.wgsl  mipmap_vertex.wgsl  state.rs  texture.rs  util.rs
rust/wasm-lib/src/render/pipeline_grid/: instance.rs  shader.wgsl
rust/wasm-lib/src/render/pipeline_rect/: shader.wgsl  vertex.rs
rust/wasm-lib/src/render/rectdraw/: billy.rs  countdown.rs  level.rs  mod.rs
rust/wp-engine-clock/: Cargo.toml  config.toml
rust/wp-engine-clock/src/: config.rs  error.rs  level.rs  main.rs  object.rs  state.rs  util.rs  utilgen.rs
rust/wp-engine-clock/src/render/: data.rs  mod.rs  state.rs
rust/wp-engine-clock/src/render/pipeline_grid/: instance.rs  shader.wgsl  vertex.rs
rust/wp-engine-clock/src/render/pipeline_rect/: instance.rs  shader.wgsl  vertex.rs
rust/wp-engine-clock/src/render/rectdraw/: countdown.rs  level.rs  mod.rs
shared-lib/: package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.tsbuildinfo
shared-lib/cjs/: index.js  package.json  util.d.ts  util.js
shared-lib/esm/: index.d.ts  index.js  package.json  util.js
shared-lib/src/: base_util.ts  cloud_functions.ts  database.ts  db_util.ts  ending.ts  gd.ts  index.ts  kofi.ts  nexusgen.ts  user.ts  util.ts
src/: Announcement.svelte  App.svelte  DataPopup.svelte  Editor.svelte  Glub.svelte  LoadWasm.ts  Turnstiles.svelte  app.css  app.html  easing_shit.py  firebase.ts  globals.d.ts  grecaptcha.ts  hooks.client.ts  loadWasm.ts  load_wasm.ts  main.ts  state.ts  stores.ts  test.ts  test2.js  timelapse.ts  util.ts  vite-env.d.ts  wonktest.ts
src/assets/: betatestdb.json  spritesheet.ver  wasm.txt  wasm.ver
src/components/: Animate.svelte  Button.svelte  ClosableWindow.svelte  ColorPickerWrapper.svelte  ColoredName.svelte  DarkInput.svelte  FadedScroll.svelte  GradientPicker.svelte  HueSlider.svelte  Image.svelte  Input.svelte  KofiButton.svelte  Loading.svelte  Logo.svelte  OldInput.svelte  OnceButton.svelte  OpacitySlider.svelte  PaletteGrid.svelte  RadialCooldown.svelte  Radio.svelte  ScreenModal.svelte  SlidingSelector.svelte  ToastContainer.svelte  ToastContainers.svelte  ToggleSwitch.svelte
src/ending/: AnimatedEnding.svelte  EndingNameInput.svelte  LiveNameInput.svelte  SharedEnding.svelte  StatsDisplay.svelte  ViewLevelButton.svelte  ending.ts  ending_styles.css
src/firebase/: announcements.ts  auth.ts  chunks.ts  cloudFunctions.ts  cloud_functions.ts  cooldowns.ts  donations.ts  firebase.ts  moderation.ts  (+2 more)
the-nexus/: Cargo.toml  objects.json  spritesheet.json
the-nexus/src/: colors.rs  config.rs  lib.rs  packing.rs  sprites.rs  util.rs
the-nexus/src/objects/: countdowndigits.gmd  list.rs  mod.rs  object_types.txt  placeobjs.gmd  sfx.rs
wasm-lib/: Cargo.toml  pkg_package.json
wasm-lib/src/: layer.rs  level.rs  lib.rs  object.rs  state.rs  text.rs  util.rs  utilgen.rs
wasm-lib/src/render/: data.rs  mod.rs  state.rs  texture.rs  util.rs
wasm-lib/src/render/pipeline_grid/: shader.wgsl
wasm-lib/src/render/pipeline_rect/: instance.rs  shader.wgsl  vertex.rs
wasm-lib/src/render/rectdraw/: billy.rs  countdown.rs  level.rs  mod.rs
(+118 files in other folders)
