[workspace]
members = ["rust-shared", "the-nexus", "wasm-lib"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
glam = "0.29.0"
bytemuck = "1.18.0"
image = "0.25.2"
serde = "1.0.190"
serde_json = "1.0.107"
js-sys = "0.3.70"
indexmap = "2.5.0"
binrw = "0.14.0"
slab = "0.4.9"
color_space = "0.5.4"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
