[workspace]
members = ["rust-shared", "the-nexus", "draw-lib", "timelapse"]
resolver = "2"

[profile.prod]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1

[profile.prod-debug]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
debug = true


[workspace.dependencies]
winit = "0.30.5"
glam = "0.29.0"
rand = "0.8.5"
bytemuck = "1.18.0"
image = "0.25.2"
serde = "1.0.190"
serde_json = "1.0.107"
indexmap = "2.5.0"
binrw = "0.14.0"
slab = "0.4.9"
color_space = "0.5.4"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
num-bigint = "0.4.6"
