[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["@DexterHill0", "@FlowVix"]
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
js-sys = "0.3.65"

env_logger = "0.10.0"
log = "0.4.20"

console_error_panic_hook = { version = "0.1.7", optional = true }
# wasm-bindgen-futures = "0.4.30"

desen = { git = "https://github.com/FlowVix/desen.git", features = [
    "html-canvas",
], rev = "86e651e" }


#desen = { path = "../../Rust/drawtest/desen", features = ["html-canvas"] }
nalgebra = "0.32.3"

base64 = "0.21.5"

serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"

the-nexus = { path = "../the-nexus" }

colored = "2.0.4"
indexmap = "2.1.0"
# lyon = "1.0.1"
base85 = "2.0.0"
ascii85 = "0.2.1"

[build]
target = "wasm32-unknown-unknown"
