[package]
name = "rust-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
js-sys = { workspace = true }
indexmap = { workspace = true }
binrw = { workspace = true }
