[package]
name = "rust-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
indexmap = { workspace = true }
binrw = { workspace = true }
slab = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"


[build-dependencies]
uuid = { workspace = true }
