[package]
name = "the-nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.test]
opt-level = 3

[dependencies]
paste = "1.0.14"
convert_case = "0.6.0"
itertools = "0.11.0"
texture_packer = "0.29.0"

regex = "1.10.5"
base64 = "0.21.0"

flate2 = "1.0.30"
# specta = "1.0.5"
color_space = { workspace = true }

rust-shared = { path = "../rust-shared" }


serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
image = { workspace = true }

binrw = { workspace = true }

[build-dependencies]
uuid = { workspace = true }
