[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["@DexterHill0", "@FlowVix"]
edition = "2021"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "OffscreenCanvas",
] }
wgpu = { version = "0.20.1", features = ["webgl"] }

env_logger = "0.11.3"
log = "0.4.22"

glam = { workspace = true, features = ["bytemuck"] }
console_error_panic_hook = { version = "0.1.7", optional = true }


wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
js-sys = { workspace = true }
image = { workspace = true }
binrw = { workspace = true }
indexmap = { workspace = true }
# desen = { git = "https://github.com/FlowVix/desen.git", features = [
#     "html-canvas",
# ] }


#desen = { path = "../../Rust/drawtest/desen", features = ["html-canvas"] }


# base64 = "0.21.5"
# base-encode = "0.3.1"
# ascii85 = "0.2.1"

# serde = { version = "1.0.190", features = ["derive"] }
# bincode = "1.3.3"

rust-shared = { path = "../rust-shared" }
# the-nexus = { path = "../the-nexus" }

# colored = "2.0.4"

specta = "1.0.5"

[build-dependencies]
uuid = { workspace = true }

[build]
target = "wasm32-unknown-unknown"
